# codegen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codegen.cpp  codegen.h  main.cpp  parsing.cpp  parsing.h  settings.h  snippets.cpp  snippets.h  storage.h  types.cpp  types.h  util.cpp  util.h  verifier.cpp  verifier.h
lib/: CMakeLists.txt  codegen.cpp  codegen.h  keywords.h  parsing.cpp  parsing.h  settings.h  snippets.cpp  snippets.h  types.cpp  types.h  util.cpp  util.h  verifier.cpp  verifier.h
tests/: CMakeLists.txt  main.cpp  parsing_attributes.cpp  parsing_attributes_error_bool.cpp  parsing_attributes_error_dmat2x2.cpp  parsing_attributes_error_dmat2x3.cpp  parsing_attributes_error_dmat2x4.cpp  parsing_attributes_error_dmat3x2.cpp  parsing_attributes_error_dmat3x3.cpp  parsing_attributes_error_dmat3x4.cpp  parsing_attributes_error_dmat4x2.cpp  parsing_attributes_error_dmat4x3.cpp  parsing_attributes_error_dmat4x4.cpp  parsing_attributes_error_double.cpp  parsing_attributes_error_dvec2.cpp  parsing_attributes_error_dvec3.cpp  parsing_attributes_error_dvec4.cpp  parsing_attributes_error_float.cpp  parsing_attributes_error_int.cpp  parsing_attributes_error_ivec2.cpp  parsing_attributes_error_ivec3.cpp  parsing_attributes_error_ivec4.cpp  parsing_attributes_error_mat2x2.cpp  parsing_attributes_error_mat2x3.cpp  parsing_attributes_error_mat2x4.cpp  parsing_attributes_error_mat3x2.cpp  parsing_attributes_error_mat3x3.cpp  parsing_attributes_error_mat3x4.cpp  parsing_attributes_error_mat4x2.cpp  parsing_attributes_error_mat4x3.cpp  parsing_attributes_error_mat4x4.cpp  parsing_attributes_error_monostate.cpp  parsing_attributes_error_string.cpp  parsing_attributes_error_vec2.cpp  parsing_attributes_error_vec3.cpp  parsing_attributes_error_vec4.cpp  parsing_error.cpp  parsing_map.cpp  parsing_other.cpp  parsing_struct.cpp  (+4 more)
tests/execution/: attributes.cpp  attributes_codegen.cpp  basic_types.cpp  basic_types_codegen.cpp  basic_types_optional.cpp  basic_types_optional_codegen.cpp  basic_types_optional_vector.cpp  basic_types_optional_vector_codegen.cpp  basic_types_vector.cpp  basic_types_vector_codegen.cpp  enums.cpp  enums_codegen.cpp  execution_attributes.cpp  execution_basic_types.cpp  execution_basic_types_optional.cpp  execution_basic_types_optional_vector.cpp  execution_basic_types_vector.cpp  execution_enummapping.cpp  execution_enums.cpp  execution_map.cpp  execution_multiple.cpp  execution_optional_variant_vector.cpp  execution_other.cpp  execution_shadowing.cpp  execution_simple.cpp  execution_substructs.cpp  execution_variant.cpp  simple.cpp  simple_codegen.cpp  substructs.cpp  substructs_codegen.cpp
tests/execution_enums/: execution_enums_arrayify.cpp  execution_enums_basic.cpp  execution_enums_basic_codegen.cpp  execution_enums_keys.cpp  execution_enums_keys_codegen.cpp  execution_enums_mapping.cpp  execution_enums_mapping_codegen.cpp  execution_enums_multiple.cpp  execution_enums_multiple_codegen.cpp
tests/execution_luawrapper/: execution_luawrapper_arguments.cpp  execution_luawrapper_arguments_enums.cpp  execution_luawrapper_arguments_readback.cpp  execution_luawrapper_arguments_structs.cpp  execution_luawrapper_basic.cpp  execution_luawrapper_comments.cpp  execution_luawrapper_pointer.cpp  execution_luawrapper_return.cpp  execution_luawrapper_types_bool.cpp  execution_luawrapper_types_dictionary.cpp  execution_luawrapper_types_dmat2x2.cpp  execution_luawrapper_types_dmat2x3.cpp  execution_luawrapper_types_dmat2x4.cpp  execution_luawrapper_types_dmat3x2.cpp  execution_luawrapper_types_dmat3x3.cpp  execution_luawrapper_types_dmat3x4.cpp  execution_luawrapper_types_dmat4x2.cpp  execution_luawrapper_types_dmat4x3.cpp  execution_luawrapper_types_dmat4x4.cpp  execution_luawrapper_types_double.cpp  execution_luawrapper_types_dvec2.cpp  execution_luawrapper_types_dvec3.cpp  execution_luawrapper_types_dvec4.cpp  execution_luawrapper_types_float.cpp  execution_luawrapper_types_int.cpp  execution_luawrapper_types_ivec2.cpp  execution_luawrapper_types_ivec3.cpp  execution_luawrapper_types_ivec4.cpp  execution_luawrapper_types_mat2x2.cpp  execution_luawrapper_types_mat2x3.cpp  execution_luawrapper_types_mat2x4.cpp  execution_luawrapper_types_mat3x2.cpp  execution_luawrapper_types_mat3x3.cpp  execution_luawrapper_types_mat3x4.cpp  execution_luawrapper_types_mat4x2.cpp  execution_luawrapper_types_mat4x3.cpp  execution_luawrapper_types_mat4x4.cpp  execution_luawrapper_types_path.cpp  execution_luawrapper_types_pointer.cpp  execution_luawrapper_types_string.cpp  (+6 more)
tests/execution_misc/: execution_misc_multiple.cpp  execution_misc_parentdoc.cpp  execution_misc_parentdoc_codegen.cpp
tests/execution_structs/: execution_structs_array.cpp  execution_structs_attributes.cpp  execution_structs_attributes_codegen.cpp  execution_structs_basic_types.cpp  execution_structs_basic_types_codegen.cpp  execution_structs_basic_types_optional.cpp  execution_structs_basic_types_optional_codegen.cpp  execution_structs_basic_types_optional_vector.cpp  execution_structs_basic_types_optional_vector_codegen.cpp  execution_structs_basic_types_vector.cpp  execution_structs_basic_types_vector_codegen.cpp  execution_structs_comments.cpp  execution_structs_enummapping.cpp  execution_structs_enummapping_codegen.cpp  execution_structs_enums.cpp  execution_structs_enums_codegen.cpp  execution_structs_map.cpp  execution_structs_map_codegen.cpp  execution_structs_map_enum_key.cpp  execution_structs_multiple.cpp  execution_structs_multiple_codegen.cpp  execution_structs_optional_variant_vector.cpp  execution_structs_optional_variant_vector_codegen.cpp  execution_structs_other.cpp  execution_structs_other_codegen.cpp  execution_structs_shadowing.cpp  execution_structs_shadowing_codegen.cpp  execution_structs_simple.cpp  execution_structs_simple_codegen.cpp  execution_structs_substructs.cpp  execution_structs_substructs_codegen.cpp  execution_structs_tuple.cpp  execution_structs_variant.cpp  execution_structs_variant_codegen.cpp  execution_structs_variant_filesystem.cpp
(+147 files in other folders)
